# hostess

./: .gitignore  README.md  conftest.py  environment.yml  environment_dev.yml  mkdocs.yml  pyproject.toml  refgraph_scratch_work.ipynb  sample_station_application.py  setup.py  text_app_work.py  text_station_work.py  textual_callback_signature_monkeypatch.py  view_testing_script.py
docs/: LICENSE.md  environment.yml  hostess_api.md  index.md  version_history.md
examples/: ec2.ipynb  s3.ipynb
hostess/: __init__.py  _backup_monitors.py  _ssh_backup.py  _subutils_backup.py  caller.py  directory.py  disintegration.py  fabric_ssh.py  invoke_subutils.py  monitors.py  profilers.py  serverpool.py  shortcuts.py  ssh.py  subutils.py  utilities.py
hostess/_graveyard/: _subutils_backup.py
hostess/_graveyard/controller_graveyard/: serve_tasks.py  solicit_tasks.py
hostess/aws/: _s3transfer_range_extension.py  ec2.py  ecs.py  pricing.py  s3.py  utilities.py
hostess/aws/_s3transfer_extensions/: processpool_range.py  threadpool_range.py
hostess/aws/s3transfer_extensions/: processpool_range.py  threadpool_range.py
hostess/aws/tests/: aws_test_utils.py  conftest.py  test_ec2.py  test_s3.py
hostess/config/: __init__.py  config.py
hostess/controller/: solicit_tasks.py
hostess/station/: actors.py  bases.py  comm.py  delegates.py  handlers.py  messages.py  nodes.py  notes.md  proto_utils.py  rules.py  station.py  talkie.py  talkie_oop.py  viewing.py
hostess/station/proto/: station.proto  (+1 more)
hostess/tests/: _leaky_module.py  test_caller.py  test_directory.py  test_disintegrate.py  test_monitors.py  test_profilers.py  test_subutils.py  test_utilities.py  test_utilz.py  utilz.py
killscreen/: caller.py  monitors.py  ssh.py  subutils.py  utilities.py
killscreen/aws/: ec2.py  pricing.py  s3.py  utilities.py
killscreen/config/: __init__.py  config.py  user_config.py
killscreen/controller/: parsing.py  serve_tasks.py  solicit_tasks.py
(+24 files in other folders)
