# pyproject.toml documentation for reference:
#   https://packaging.python.org/en/latest/
#   https://setuptools.pypa.io/en/latest/userguide/

[project]
name        = "hostess"
version     = "0.11.0"
description = "intuitive admin library"
readme      = "README.md"
license     = { file = "LICENSE.md" }

authors     = [
    { name = "M. St. Clair",     email = "mstclair@millionconcepts.com"    },
    { name = "Sierra Brown", email = "sierra@millionconcepts.com" },
    { name = "Chase Million",    email = "chase@millionconcepts.com"  },
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Unix Shell"
]

requires-python = ">=3.10"
dependencies = [
    "cytoolz",
    "dustgoggles",
    "invoke",
    "more-itertools",
    "pandas",
    "psutil",
    "pyyaml",
    "requests",
    "rich",
]

[project.optional-dependencies]
aws = ["boto3", "fabric"]
directory = ["python-magic"]
profilers = ["pympler"]
ssh = ["fabric"]
station = ["dill", "fire", "protobuf", "textual"]
tests = ["pillow", "pytest"]

[project.urls]
Repository = "https://github.com/MillionConcepts/hostess"
Documentation = "https://hostess.readthedocs.io/en/latest/"
Changelog = "https://hostess.readthedocs.io/en/latest/version_history/"

[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
hostess = ["station/tests/test_data/*.*", "station/proto/*.*"]

[tool.setuptools.packages]
find = {namespaces = false}

# Recommended for new projects by pytest manual.
[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib"
]
